--- a/style.css
+++ b/style.css
@@ -4,3 +4,27 @@
     align-items: center;
     justify-content: center;
 }
+
+.items {
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid #8c8c8c;
+}
+
+.emojiitem {
+    font-size: 2rem;
+    padding-bottom: .2rem;
+}
+
+.codes {
+    background-color: rgba(213, 213, 213, 0.5);
+    padding: .2rem;
+}
+
+
